--- a/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
+++ b/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
@@ -176,3 +176,4 @@ record.invalid.readonly.field.update = cannot update ''readonly'' field ''{0}'' 
 invalid.update.on.readonly.value = modification not allowed on readonly value
 object.invalid.final.field.update = cannot update ''final'' field ''{0}'' in object of type ''{1}''
 unsupported.comparison.operation = cannot compare ''{0}'' and ''{1}''
+unordered.types.in.comparison = ''{0}'' is unordered with respect to ''{1}''
