Refactor runtime diagnostics impl

--- a/bvm/ballerina-runtime/src/main/resources/MessagesBundle_en_US.properties
+++ b/bvm/ballerina-runtime/src/main/resources/MessagesBundle_en_US.properties
@@ -160,3 +160,40 @@ tuple.index.out.of.range = tuple index out of range: index: {0}, size: {1}
 illegal.array.insertion = array of length {0} cannot be expanded into array of length {1} without filler values
 java.null.reference = handle refers to Java null
 illegal.tuple.insertion = tuple of length {0} cannot be expanded into tuple of length {1} without filler values
+
+#configurations
+config.type.not.supported = configurable variable ''{0}'' with type ''{1}'' is not supported
+config.invalid.byte.range = [{0}] value provided for byte variable ''{1}'' is out of range. Expected range is \
+(0-255), found ''{2}''
+config.value.not.provided = value not provided for required configurable variable ''{0}''
+config.incompatible.type = [{0}] configurable variable ''{1}'' is expected to be of type ''{2}'', but found ''{3}''
+
+#configurations.toml
+config.toml.invalid.file = invalid toml file : {0}
+config.toml.file.not.found=configuration file is not found in path ''{0}''
+config.toml.type.not.supported = configurable variable ''{0}'' with type ''{1}'' is not supported as a toml value
+config.toml.invalid.additional.record.field = [''{0}''] additional field ''{1}'' provided for configurable variable \
+''{2}'' of record ''{3}'' is not supported
+config.toml.field.not.supported = [''{0}''] field type ''{1}'' in configurable variable ''{2}'' is not supported
+config.toml.required.field.not.provided = [''{0}''] value not provided for non-defaultable required field ''{1}'' of \
+record ''{2}'' in configurable variable ''{3}''
+config.toml.table.key.not.provided = [''{0}''] value required for key ''{1}'' of type ''{2}'' in configurable variable\
+''{3}''
+config.toml.invalid.module.structure = [''{0}''] invalid module structure found for module ''{1}''. Please provide the\
+module name as '['{2}']'
+config.toml.constraint.type.not.supported = [''{0}''] table constraint type ''{1}'' in configurable variable ''{2}'' \
+is not supported
+config.toml.default.field.not.supported = [''{0}''] defaultable readonly record field ''{1}'' in configurable variable\
+''{2}'' is not supported
+config.toml.empty.file = [''{0}''] an empty configuration file is found in path ''{1}''. Please provide values for \
+configurable variables
+config.toml.empty.content = [''{0}''] environment variable ''{1}'' contains an empty string. Please provide values for\
+   configurable variables
+config.toml.field.incompatible.type = ['{0}'] field ''{1}'' from configurable variable ''{2}'' is \
+  expected to be of type ''{3}'', but found ''{4}''
+config.toml.read.failed = failed to read file: '{0}' due to '{1}'
+config.toml.parse.failed = failed to parse file: '{0}' due to '{1}'
+
+#configurations.cli
+config.cli.type.not.supported = [{0}] value for configurable variable ''{1}'' with type ''{2}'' is not supported \
+as a cli arg
