Add some remaining runtime error types to relevant modules and remove unused definitions

--- a/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
+++ b/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
@@ -187,3 +187,6 @@ key.not.defined = keys are not defined
 table.has.a.value.for.key = a value found for key ''{0}''
 type.inconsistent.with.inherent.table = value type ''{0}'' inconsistent with the inherent table type ''{1}''
 json.value.not.a.mapping = JSON value is not a mapping
+merge.json.values.of.different.types = cannot merge JSON values of types ''{0}'' and ''{1}''
+merge.json.values.with.cyclic.reference = cannot merge JSON values with cyclic references
+mutated.table.iterator = table has been mutated after the iterator created
