--- a/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
+++ b/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
@@ -172,6 +172,7 @@ illegal.tuple.size = cannot change the length of a tuple of fixed length ''{0}''
 illegal.rest.tuple.size = cannot change the length of a tuple with ''{0}'' mandatory member(s) to ''{1}''
 string.index.out.of.range = string index out of range: index: {0}, size: {1}
 substring.index.out.of.range = string index out of range. Length:''{0}'' requested: ''{1}'' to ''{2}''
+codepoint.index.out.of.range = string codepoint index out of range: ''{0}''
 invalid.substring.range = invalid substring range. Length:''{0}'' requested: ''{1}'' to ''{2}''
 xml.index.out.of.range = xml sequence index out of range. Length: ''{0}'' requested: ''{1}''
 record.invalid.readonly.field.update = cannot update ''readonly'' field ''{0}'' in record of type ''{1}''
