Add tests covers missing lines based on codecov

--- a/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
+++ b/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
@@ -216,5 +216,4 @@ config.toml.module.ambiguity =  [{0}] the module name ''{1}'' clashes with an im
   provide the module name as ''[{2}]''
 
 #configurations.cli
-config.cli.type.not.supported = [{0}] value for configurable variable ''{1}'' with type ''{2}'' is not supported \
-as a cli arg
+config.cli.type.not.supported = value for configurable variable ''{0}'' with type ''{1}'' is not supported as a cli arg
