--- a/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
+++ b/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
@@ -198,7 +198,7 @@ config.toml.required.field.not.provided = [{0}] value not provided for non-defau
 record ''{2}'' in configurable variable ''{3}''
 config.toml.table.key.not.provided = [{0}] value required for key ''{1}'' of type ''{2}'' in configurable variable \
   ''{3}''
-config.toml.invalid.module.structure = [{0}] invalid module structure found for module ''{1}''. Please provide the \
+config.toml.invalid.module.structure = [{0}] invalid toml structure found for module ''{1}''. Please provide the \
   module name as ''[{2}]''
 config.toml.constraint.type.not.supported = [{0}] table constraint type ''{1}'' in configurable variable ''{2}'' \
 is not supported
