Revise error messages

--- a/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
+++ b/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
@@ -214,6 +214,7 @@ config.toml.read.failed = failed to read file: '{0}' due to '{1}'
 config.toml.parse.failed = failed to parse file: '{0}' due to '{1}'
 config.toml.module.ambiguity =  [{0}] the module name ''{1}'' clashes with an imported organization name. Please \
   provide the module name as ''[{2}]''
+config.toml.unused.value =  [{0}] unused configuration value ''{1}''
 
 #configurations.cli
 config.cli.type.not.supported = value for configurable variable ''{0}'' with type ''{1}'' is not supported as a cli arg
