--- a/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
+++ b/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
@@ -221,4 +221,4 @@ config.cli.type.not.supported = value for configurable variable ''{0}'' with typ
 config.cli.variable.ambiguity = configurable value for variable ''{0}'' clashes with variable ''{1}''. Please \
   provide the command line argument as ''[{2}]''
 config.cli.args.ambiguity = configurable value for variable ''{0}'' clashes with multiple command line arguments {1}
-config.cli.unused.args = unused command line arguments found {0}
+config.cli.unused.args = [{0}] unused command line argument
