Add map support for configurable

--- a/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
+++ b/bvm/ballerina-runtime/src/main/resources/MessagesBundle.properties
@@ -210,8 +210,8 @@ config.toml.empty.content = [{0}] environment variable ''{1}'' contains an empty
    configurable variables
 config.toml.field.incompatible.type = [{0}] field ''{1}'' from configurable variable ''{2}'' is \
   expected to be of type ''{3}'', but found ''{4}''
-config.toml.read.failed = failed to read file: '{0}' due to '{1}'
-config.toml.parse.failed = failed to parse file: '{0}' due to '{1}'
+config.toml.read.failed = failed to read file: ''{0}'' due to \n''{1}''
+config.toml.parse.failed = failed to parse file: ''{0}'' due to \n''{1}''
 config.toml.module.ambiguity =  [{0}] the module name ''{1}'' clashes with an imported organization name. Please \
   provide the module name as ''[{2}]''
 config.toml.unused.value =  [{0}] unused configuration value ''{1}''
